[gd_scene load_steps=21 format=3 uid="uid://bhmsltkelqu7b"]

[ext_resource type="Texture2D" uid="uid://dnbkje2qi8t7a" path="res://assets/sprites/gameover-sprites/Timeline GAME OVER_0000.png" id="1_inlpg"]
[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_so41m"]
[ext_resource type="Texture2D" uid="uid://cx5488a1dbnm6" path="res://assets/sprites/gameover-sprites/Timeline GAME OVER_0001.png" id="2_p8y4c"]
[ext_resource type="Texture2D" uid="uid://cqo5odk71iafj" path="res://assets/sprites/gameover-sprites/Timeline GAME OVER_0002.png" id="3_l7e5p"]
[ext_resource type="Texture2D" uid="uid://byiyletgd57u3" path="res://assets/sprites/gameover-sprites/Timeline GAME OVER_0003.png" id="4_ti3kq"]
[ext_resource type="Texture2D" uid="uid://7wmmtlbjmfrc" path="res://assets/sprites/gameover-sprites/Timeline GAME OVER_0004.png" id="5_vdemp"]
[ext_resource type="Texture2D" uid="uid://dgtgnm8sig6ig" path="res://assets/sprites/gameover-sprites/Timeline GAME OVER_0005.png" id="6_44fsi"]
[ext_resource type="Texture2D" uid="uid://bwb1n0ks5a6nt" path="res://assets/sprites/gameover-sprites/Timeline GAME OVER_0006.png" id="7_kqq2w"]
[ext_resource type="Texture2D" uid="uid://bfu5v0ut4h1hr" path="res://assets/sprites/gameover-sprites/Timeline GAME OVER_0007.png" id="8_ovtq8"]
[ext_resource type="Texture2D" uid="uid://doxdo806lrw1x" path="res://assets/sprites/gameover-sprites/Timeline GAME OVER_0008.png" id="9_43wo4"]
[ext_resource type="Texture2D" uid="uid://3iku8lsdxhnr" path="res://assets/sprites/gameover-sprites/Timeline GAME OVER_0009.png" id="10_oyukh"]
[ext_resource type="Texture2D" uid="uid://b65ovljsgdi8f" path="res://assets/sprites/gameover-sprites/Timeline GAME OVER_0010.png" id="11_gdgau"]
[ext_resource type="Texture2D" uid="uid://3tqctuxauxw8" path="res://assets/sprites/gameover-sprites/Timeline GAME OVER_0011.png" id="12_p7ljs"]
[ext_resource type="Texture2D" uid="uid://c052u4xmq42tg" path="res://assets/sprites/gameover-sprites/Timeline GAME OVER_0012.png" id="13_piggh"]
[ext_resource type="Texture2D" uid="uid://b34mxhc5fhxd8" path="res://assets/sprites/gameover-sprites/Timeline GAME OVER_0013.png" id="14_aowfk"]
[ext_resource type="Texture2D" uid="uid://c7rr8mb0qil0f" path="res://assets/sprites/gameover-sprites/Postid1.png" id="15_lwn08"]
[ext_resource type="Texture2D" uid="uid://jrv322ygdpa1" path="res://assets/sprites/gameover-sprites/Postid4.png" id="16_vovh4"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qk41d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_inlpg")
}, {
"duration": 1.0,
"texture": ExtResource("2_p8y4c")
}, {
"duration": 1.0,
"texture": ExtResource("3_l7e5p")
}, {
"duration": 1.0,
"texture": ExtResource("4_ti3kq")
}, {
"duration": 1.0,
"texture": ExtResource("5_vdemp")
}, {
"duration": 1.0,
"texture": ExtResource("6_44fsi")
}, {
"duration": 1.0,
"texture": ExtResource("7_kqq2w")
}, {
"duration": 1.0,
"texture": ExtResource("8_ovtq8")
}, {
"duration": 1.0,
"texture": ExtResource("9_43wo4")
}, {
"duration": 1.0,
"texture": ExtResource("10_oyukh")
}, {
"duration": 1.0,
"texture": ExtResource("11_gdgau")
}, {
"duration": 1.0,
"texture": ExtResource("12_p7ljs")
}, {
"duration": 1.0,
"texture": ExtResource("13_piggh")
}, {
"duration": 2.0,
"texture": ExtResource("14_aowfk")
}],
"loop": true,
"name": &"gameoverAnimation",
"speed": 5.0
}]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7g8p8"]
texture = ExtResource("15_lwn08")
expand_margin_left = 10.0
expand_margin_top = 25.0
expand_margin_right = 10.0
expand_margin_bottom = 25.0
modulate_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rw3oh"]
texture = ExtResource("16_vovh4")
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0
modulate_color = Color(0, 0, 0, 1)

[node name="GameOver" type="Node2D"]
script = ExtResource("1_so41m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(578, 326)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_qk41d")
animation = &"gameoverAnimation"
autoplay = "gameoverAnimation"
frame = 9
frame_progress = 0.195949

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 220.0
offset_top = 515.0
offset_right = 933.0
offset_bottom = 577.0
size_flags_stretch_ratio = 0.1
alignment = 1

[node name="RetryButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxTexture_7g8p8")
text = "volver a intentarlo"
flat = true

[node name="ExitButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxTexture_rw3oh")
text = "salir del juego"
flat = true

[connection signal="pressed" from="HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
